--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,3 +21,6 @@ steps:
 
 images:
   - 'gcr.io/$PROJECT_ID/mi-app-podcast:v1'
+options:
+  logging: CLOUD_LOGGING_ONLY
+  logsBucket: "gs://podcast-yt/logs-docker-images"
