--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,5 +23,5 @@ images:
   - 'gcr.io/$PROJECT_ID/mi-app-podcast:v1'
 logsBucket: "gs://podcast-yt/logs-docker-images"
 options:
-  logging: CLOUD_LOGGING_ONLY
+  logging: GCS_ONLY
   
