--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,11 @@
 steps:
   # 1️⃣ Construir la imagen con Docker
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/mi-app-podcast:v1', '.']
+    args: ['build', '-t', 'europe-southwest1-docker.pkg.dev/proyecto-s2t-podcast/docker-s2t-podcast:latest', '.']
 
   # 2️⃣ Subir la imagen a Artifact Registry o Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/mi-app-podcast:v1']
+    args: ['push', 'europe-southwest1-docker.pkg.dev/proyecto-s2t-podcast/docker-s2t-podcast:latest']
 
   # 3️⃣ Desplegar en Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -14,13 +14,13 @@ steps:
       - 'run'
       - 'deploy'
       - 'mi-app-podcast'
-      - '--image=gcr.io/$PROJECT_ID/mi-app-podcast:v1'
+      - '--image=europe-southwest1-docker.pkg.dev/proyecto-s2t-podcast/docker-s2t-podcast:latest'
       - '--platform=managed'
       - '--region=us-central1'
       - '--allow-unauthenticated'
 
 images:
-  - 'gcr.io/$PROJECT_ID/mi-app-podcast:v1'
+  - 'europe-southwest1-docker.pkg.dev/proyecto-s2t-podcast/docker-s2t-podcast:latest'
 logsBucket: "gs://podcast-yt/logs-docker-images"
 options:
   logging: GCS_ONLY
