--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-flask==2.2.2
-yt-dlp==2023.2.7
-google-cloud-storage==2.9.0
-google-cloud-speech==3.5.1
-google-generativeai==0.3.0
+flask
+yt-dlp
+google-cloud-storage
+google-cloud-speech
+google-generativeai
